testing mouse tracker

--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
 
 <body>
 
-  <h1 class="title py-5">terrafomacja<br> marsa</h1>
+  <h1 class="title py-5">terraformacja<br> marsa</h1>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script>
+    function doScroll() {
+      $("html, body").animate(
+        { scrollTop: "0" }, 1000);
+      $("html, body").animate(
+        { scrollTop: "30" }, 1000);
+    }
+    setInterval(doScroll, 2000);
+    doScroll();
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="modules/scripts/TMapp.js"></script>
