alternative solution for map generation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
 </head>
 
 <body>
-
+  <marquee>Super ceny!!!</marquee>
+  <p><strong>Menu sierpniowe</strong></p>
+  <ul>
+    <li>
+      zupa - 2zł
+    </li>
+    <li>
+      drugie - 3zł
+    </li>
+    <li>
+      deser - 1zł
+    </li>
+  </ul>
   <h1 class="title py-5">terraformacja<br> marsa</h1>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script>
@@ -31,5 +44,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="modules/scripts/TMapp.js"></script>
 </body>
+
 
 </html>
