--- a/index.html
+++ b/index.html
@@ -14,16 +14,33 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="modules/styles/TMstyle.css" />
+    <!--JS PDF library-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>-->
   </head>
 
   <body>
-    <h1 class="title py-5">
-      terraformacja<br />
-      planety
-    </h1>
+    <h1 class="title py-5">terraformacja<br /></h1>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
+      //print pdf implementation
+      // $(document).ready(function () {
+      //   var doc = new jsPDF();
+      //   var specialElementHandlers = {
+      //     '#pdf-content': function (element, renderer) {
+      //       return true;
+      //     },
+      //   };
+
+      //   $('#btn').click(function () {
+      //     doc.fromHTML($('#mapContainer').html(), 15, 15, {
+      //       width: 170,
+      //       elementHandlers: specialElementHandlers,
+      //     });
+      //     doc.save('terraforming.pdf');
+      //   });
+      // });
+
       /* function doScroll() {
        $("html, body").animate(
          { scrollTop: "0" }, 1000);
@@ -37,5 +54,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="modules/scripts/TMapp.js"></script>
+    <div id="pdf-content"></div>
+    <!--<button class="btn btn-primary" id="btn">Generate PDF</button>-->
   </body>
 </html>
