--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="modules/styles/TMstyle.css" />
     <!--JS PDF library-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
   </head>
 
   <body>
@@ -24,37 +24,39 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
       //print pdf implementation
-      // $(document).ready(function () {
-      //   var doc = new jsPDF();
-      //   var specialElementHandlers = {
-      //     '#pdf-content': function (element, renderer) {
-      //       return true;
-      //     },
-      //   };
+      $(document).ready(function () {
+        var doc = new jsPDF();
+        var specialElementHandlers = {
+          '#pdf-content': function (element, renderer) {
+            return true;
+          },
+        };
 
-      //   $('#btn').click(function () {
-      //     doc.fromHTML($('#mapContainer').html(), 15, 15, {
-      //       width: 170,
-      //       elementHandlers: specialElementHandlers,
-      //     });
-      //     doc.save('terraforming.pdf');
-      //   });
-      // });
+        $('#btn').click(function () {
+          doc.fromHTML($('#mapContainer').html(), 15, 15, {
+            width: 170,
+            elementHandlers: specialElementHandlers,
+          });
+          doc.save('terraforming.pdf');
+        });
+      });
 
       /* function doScroll() {
-       $("html, body").animate(
-         { scrollTop: "0" }, 1000);
-       $("html, body").animate(
-         { scrollTop: "30" }, 1000);
-     }
-     setInterval(doScroll, 2000);
-     doScroll();
-     */
+        $("html, body").animate(
+          { scrollTop: "0" }, 1000);
+        $("html, body").animate(
+          { scrollTop: "30" }, 1000);
+      }
+      setInterval(doScroll, 2000);
+      doScroll();
+      */
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="modules/scripts/TMapp.js"></script>
     <div id="pdf-content"></div>
-    <!--<button class="btn btn-primary" id="btn">Generate PDF</button>-->
+    <div class="row justify-content-center">
+      <button class="btn btn-primary mt-5" id="btn">Generate PDF</button>
+    </div>
   </body>
 </html>
