--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="modules/scripts/TMapp.js"></script>
     <div id="pdf-content"></div>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-5">
       <button class="btn btn-primary mt-5" id="btn">Generate PDF</button>
     </div>
   </body>
