--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
       //print pdf implementation
+      function printContent(el) {
+        var restorepage = document.body.innerHTML;
+        var printcontent = document.getElementById(el).innerHTML;
+        document.body.innerHTML = printcontent;
+        window.print();
+        document.body.innerHTML = restorepage;
+        //var background = document.getElementsByClassName('modal-backdrop');
+        //background
+      }
+
       $(document).ready(function () {
         var doc = new jsPDF();
         var specialElementHandlers = {
@@ -56,7 +66,14 @@
     <script src="modules/scripts/TMapp.js"></script>
     <div id="pdf-content"></div>
     <div class="row justify-content-center mt-5">
-      <button class="btn btn-primary mt-5" id="btn">Generate PDF</button>
+      <button
+        class="btn btn-primary mt-5"
+        id="print"
+        onclick="printContent('mapContainer')"
+      >
+        Print content
+      </button>
+      <button class="btn btn-danger mt-5" id="btn">Generate PDF</button>
     </div>
   </body>
 </html>
