--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="pdf-content"></div>
     <div class="row justify-content-center mt-5">
       <button
-        class="btn btn-primary mt-5"
+        class="btn btn-primary mt-5 mr-3"
         id="print"
         onclick="printContent('mapContainer')"
       >
