created container for buttons to match map container unresponiveness

--- a/index.html
+++ b/index.html
@@ -65,15 +65,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="modules/scripts/TMapp.js"></script>
     <div id="pdf-content"></div>
-    <div class="row justify-content-center mt-5">
-      <button
-        class="btn btn-primary mt-5 mr-3"
-        id="print"
-        onclick="printContent('mapContainer')"
-      >
-        Print content
-      </button>
-      <button class="btn btn-danger mt-5" id="btn">Generate PDF</button>
+    <div class="container-btn">
+      <div class="row justify-content-center mt-5">
+        <button
+          class="btn btn-primary mt-5 mr-2"
+          id="print"
+          onclick="printContent('mapContainer')"
+        >
+          Print content
+        </button>
+        <button class="btn btn-danger mt-5 ml-2" id="btn">Generate PDF</button>
+      </div>
     </div>
   </body>
 </html>
