--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="modules/styles/TMstyle.css" />
     <!--JS PDF library-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
@@ -62,20 +58,18 @@
       doScroll();
       */
       </script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
       <script src="modules/scripts/TMapp.js"></script>
       <div id="pdf-content"></div>
-      <div class="row ml-0 mr-0 justify-content-center mt-5">
+      <div class="btn-row">
         <div class="btn-box">
           <button
-            class="btn btn-primary mt-5 mr-2"
+            class="btn btn-water"
             id="print"
             onclick="printContent('mapContainer')"
           >
             Print content
           </button>
-          <button class="btn btn-danger mt-5 ml-2" id="btn">
+          <button class="btn btn-mars" id="btn">
             Generate PDF
           </button>
         </div>
