disabled useless button

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           >
             Print content
           </button>
-          <button class="btn btn-mars" id="btn">
-            Generate PDF
+          <button class="btn btn-mars disabled" id="btn">
+            Klikaj to drugie (Jeśli już cokolwiek)
           </button>
         </div>
       </div>
