added popup instructions to pig game and some minor css js changes

--- a/dice.html
+++ b/dice.html
@@ -8,8 +8,26 @@
     <title>Dice Game</title>
   </head>
   <body>
+    <div class="overlay opacity">
+      <div class="popup">
+        <button class="close-popup">&times;</button>
+        <ul>
+          <li>Player rolls the dice using <span>Roll Dice</span> button.</li>
+          <li>Player's roll is added to his <span>current score</span>.</li>
+          <li>
+            If Player rolls <span>1</span> all Player's
+            <span>current score</span> is lost and another Player's turn starts.
+          </li>
+          <li>
+            Clicking <span>Hold</span> button saves Player's
+            <span>current score</span> by adding it to the final score but also
+            ends his turn.
+          </li>
+          <li>First Player to score <span>100</span> points wins</li>
+        </ul>
+      </div>
+    </div>
     <main>
-      <h1 class="who-won"></h1>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">0</p>
@@ -27,10 +45,15 @@
         </div>
       </section>
 
-      <img src="modules/dice-content/dice-5.png" alt="Playing dice" class="dice hidden" />
+      <img
+        src="modules/dice-content/dice-5.png"
+        alt="Playing dice"
+        class="dice hidden"
+      />
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
+      <button class="btn btn--how">How does it work?</button>
     </main>
     <script src="modules/dice-content/script.js"></script>
   </body>
