--- a/dice.html
+++ b/dice.html
@@ -12,18 +12,18 @@
       <div class="popup">
         <button class="close-popup">&times;</button>
         <ul>
-          <li>Player rolls the dice using <span>Roll Dice</span> button.</li>
-          <li>Player's roll is added to his <span>current score</span>.</li>
+          <li>Player rolls dice using <span>Roll Dice</span> button.</li>
+          <li>Player's roll is added to his <span>current score</span> .</li>
           <li>
             If Player rolls <span>1</span> all Player's
             <span>current score</span> is lost and another Player's turn starts.
           </li>
           <li>
             Clicking <span>Hold</span> button saves Player's
-            <span>current score</span> by adding it to the final score but also
+            <span>current score</span> by adding it to his final score but also
             ends his turn.
           </li>
-          <li>First Player to score <span>100</span> points wins</li>
+          <li>First Player to score <span>100</span> points wins.</li>
         </ul>
       </div>
     </div>
