--- a/quiz.html
+++ b/quiz.html
@@ -14,9 +14,7 @@
     <div class="container">
       <div id="quiz">
         <button onclick="resetQuiz()" id="reset">Next</button>
-        <h3 class="scoreFinal">
-          Score: <span class="myScore">0</span>/<span class="myScore">0</span>
-        </h3>
+        <h3 class="scoreFinal">Score: <span id="myScore">0</span>%</h3>
       </div>
     </div>
 
