added random questions and 1 more data type

--- a/quiz.html
+++ b/quiz.html
@@ -19,8 +19,12 @@
             <label for="pierscionki">Pierścionki</label>
           </div>
           <div>
-            <input type="checkbox" class="check" name="test" checked />
-            <label for="test">Test</label>
+            <input type="checkbox" class="check" name="kolczyki" checked />
+            <label for="pierscionki">Kolczyki</label>
+          </div>
+          <div>
+            <input type="checkbox" class="check" name="random" checked />
+            <label for="test">Random</label>
           </div>
         </div>
         <button id="create">Start</button>
