more quiz categories

--- a/quiz.html
+++ b/quiz.html
@@ -20,11 +20,15 @@
           </div>
           <div>
             <input type="checkbox" class="check" name="kolczyki" checked />
-            <label for="pierscionki">Kolczyki</label>
+            <label for="kolczyki">Kolczyki</label>
+          </div>
+          div>
+            <input type="checkbox" class="check" name="1of10" checked />
+            <label for="1of10">1 z 10</label>
           </div>
           <div>
             <input type="checkbox" class="check" name="random" checked />
-            <label for="test">Random</label>
+            <label for="random">Random</label>
           </div>
         </div>
         <button id="create">Start</button>
