btn/checkbox fix

--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,7 @@
             <input type="checkbox" class="check" name="kolczyki" checked />
             <label for="kolczyki">Kolczyki</label>
           </div>
-          div>
+          <div>
             <input type="checkbox" class="check" name="1of10" checked />
             <label for="1of10">1 z 10</label>
           </div>
