--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
     </style>
     <link rel="stylesheet" href="modules/quiz-content/style.css" />
-    <title>quiz Basi</title>
+    <title>Quiz</title>
   </head>
   <body>
     <div id="quiz">
