commented static css link in tmproject

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }" />`
       );
     </script>
-    <link rel="stylesheet" href="modules/styles/TMstyle.css" />
+    <!-- <link rel="stylesheet" href="modules/styles/TMstyle.css" /> -->
     <!--JS PDF library-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
   </head>
