quiz divided in 2

--- a/quiz-b.html
+++ b/quiz-b.html
@@ -23,12 +23,12 @@
       <div class="starter">
         <div class="boxes">
           <div>
-            <input type="checkbox" class="check" name="1of10" checked />
-            <label for="1of10">1 z 10</label>
+            <input type="checkbox" class="check" name="pierscionki" checked />
+            <label for="pierscionki">Pierścionki</label>
           </div>
           <div>
-            <input type="checkbox" class="check" name="random" checked />
-            <label for="random">Random</label>
+            <input type="checkbox" class="check" name="kolczyki" checked />
+            <label for="kolczyki">Kolczyki</label>
           </div>
         </div>
         <button id="create">Start</button>
@@ -40,6 +40,6 @@
       </h3>
     </div>
 
-    <script src="modules/quiz-content/script-quiz.js"></script>
+    <script src="modules/quiz-content/script-quiz-b.js"></script>
   </body>
 </html>
