--- a/quiz-b.html
+++ b/quiz-b.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -30,6 +31,10 @@
             <input type="checkbox" class="check" name="kolczyki" checked />
             <label for="kolczyki">Kolczyki</label>
           </div>
+        </div>
+        <div>
+          <input type="checkbox" class="check" name="elementy" checked />
+          <label for="elementy">Elementy</label>
         </div>
         <button id="create">Start</button>
       </div>
