--- a/quiz-b.html
+++ b/quiz-b.html
@@ -35,6 +35,61 @@
             <input type="checkbox" class="check" name="elementy" checked />
             <label for="elementy">Elementy</label>
           </div>
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkiskora"
+              checked
+            />
+            <label for="bransoletkiskora">Bransoletki skórzane</label>
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkiskora"
+              checked
+            />
+            <label for="bransoletkiskora">Bransoletki skórzane</label>
+          </div>
+
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkizmini"
+              checked
+            />
+            <label for="bransoletkizmini">Bransoletki z mini elementem</label>
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkisztywne"
+              checked
+            />
+            <label for="bransoletkisztywne">Bransoletki sztywne</label>
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkisztywne"
+              checked
+            />
+            <label for="bransoletkisztywne">Bransolety sztywne</label>
+          </div>
+          <div>
+            <input
+              type="checkbox"
+              class="check"
+              name="bransoletkilancuszkowe"
+              checked
+            />
+            <label for="bransoletkilancuszkowe">Bransoletki łańcuszkowe</label>
+          </div>
         </div>
         <button id="create">Start</button>
       </div>
