new object - harry

--- a/quiz.html
+++ b/quiz.html
@@ -27,6 +27,10 @@
             <label for="1of10">1 z 10</label>
           </div>
           <div>
+            <input type="checkbox" class="check" name="harry" checked />
+            <label for="harry">Hari pota</label>
+          </div>
+          <div>
             <input type="checkbox" class="check" name="random" checked />
             <label for="random">Random</label>
           </div>
