exit quiz loop after 20 questions

--- a/quiz.html
+++ b/quiz.html
@@ -20,6 +20,10 @@
   </head>
   <body>
     <div id="quiz">
+      <!-- <div class="timer"></div> -->
+      <div id="winning-screen" class="hidden">
+        <button id="restart">Restart</button>
+      </div>
       <div class="starter">
         <div class="boxes">
           <div>
@@ -39,7 +43,7 @@
       </div>
       <h3 class="scoreFinal"><span id="myScore">0</span>%</h3>
       <h3 class="scorePoint">
-        <span id="questionsTotal">0/0</span>
+        <span id="questionsTotal">0/30</span>
       </h3>
     </div>
 
