new animation mechanic, questions and button next

--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,6 @@
   </head>
   <body>
     <div id="quiz">
-      <!-- <div class="timer"></div> -->
       <div id="winning-screen" class="hidden">
         <button id="restart">Restart</button>
       </div>
@@ -41,6 +40,7 @@
         </div>
         <button id="create">Start</button>
       </div>
+      <button onclick="resetQuiz()" id="reset">Next</button>
       <h3 class="scoreFinal"><span id="myScore">0</span>%</h3>
       <h3 class="scorePoint">
         <span id="questionsTotal">0/30</span>
