dice game- removed images in btns

--- a/dice.html
+++ b/dice.html
@@ -58,9 +58,9 @@
         alt="Playing dice"
         class="dice hidden"
       />
-      <button class="btn btn--new">🔄 New game</button>
-      <button class="btn btn--roll">🎲 Roll dice</button>
-      <button class="btn btn--hold">📥 Hold</button>
+      <button class="btn btn--new">New game</button>
+      <button class="btn btn--roll">Roll dice</button>
+      <button class="btn btn--hold">Hold</button>
       <button class="btn btn--how">How does it work?</button>
     </main>
     <script src="modules/dice-content/script.js"></script>
