--- a/quiz-rest.html
+++ b/quiz-rest.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
+    </style>
     <script>
       document.write(
         `<link rel="stylesheet" href="modules/rest-content/style.css?v=${
@@ -20,7 +23,7 @@
       </div>
       <div class="starter">
         <div class="boxes">
-          <div>
+          <div class="select">
             <label for="category">Category:</label>
             <select name="category" id="category">
               <option value="">All</option>
@@ -39,8 +42,8 @@
               <option value="&category=32">Cartoon & Animation</option>
             </select>
           </div>
-          <div>
-            <label for="difficulty">Difficulty</label>:</label>
+          <div class="select">
+            <label for="difficulty">Difficulty</label>
             <select name="difficulty" id="difficulty">
               <option value="">All</option>
               <option value="&difficulty=easy">Easy</option>
@@ -48,8 +51,8 @@
               <option value="&difficulty=hard">Hard</option>
             </select>
           </div>
-          <div>
-           <label for="amount">Number of questions:</label>:</label>
+          <div class="select">
+            <label for="amount">Number of questions:</label>
             <select name="amount" id="amount">
               <option value="amount=20">20</option>
               <option value="amount=10">10</option>
@@ -60,7 +63,7 @@
         </div>
         <button id="create">Start</button>
       </div>
-      <button onclick="resetQuiz()" id="reset">Next</button>
+      <button id="next">Next</button>
       <h3 class="scoreFinal"><span id="myScore">0</span>%</h3>
       <h3 class="scorePoint">
         <span id="questionsTotal">0/30</span>
