--- a/quiz-api.html
+++ b/quiz-api.html
@@ -9,12 +9,12 @@
     </style>
     <script>
       document.write(
-        `<link rel="stylesheet" href="modules/rest-content/style.css?v=${
+        `<link rel="stylesheet" href="modules/quiz-api-content/quiz-api-style.css?v=${
           Math.trunc(Math.random() * 10000) + 1
         }" />`
       );
     </script>
-    <title>Quiz</title>
+    <title>Quiz project</title>
   </head>
   <body>
     <div id="quiz">
@@ -71,7 +71,7 @@
     </div>
     <script>
       document.write(
-        `<script src="modules/rest-content/script-rest.js?v="${
+        `<script src="modules/quiz-api-content/quiz-api-script.js?v="${
           Math.trunc(Math.random() * 10000) + 1
         }"><\/script>`
       );
