--- a/quiz-api.html
+++ b/quiz-api.html
@@ -66,7 +66,7 @@
       <button id="next">Next</button>
       <h3 class="scoreFinal"><span id="myScore">0</span>%</h3>
       <h3 class="scorePoint">
-        <span id="questionsTotal">0/30</span>
+        <span id="questions-total">0/10</span>
       </h3>
     </div>
     <script>
