added more categories - 24 in totat

--- a/quiz-api.html
+++ b/quiz-api.html
@@ -31,13 +31,24 @@
               <option value="&category=10">Books</option>
               <option value="&category=11">Film</option>
               <option value="&category=12">Music</option>
+              <option value="&category=13">Musicals & Theatres</option>
+              <option value="&category=14">Television</option>
               <option value="&category=15">Video Games</option>
+              <option value="&category=16">Board Games</option>
               <option value="&category=17">Science & Nature</option>
               <option value="&category=18">Computers</option>
+              <option value="&category=19">Mathematics</option>
               <option value="&category=20">Mythology</option>
+              <option value="&category=21">Sports</option>
+              <option value="&category=22">Geography</option>
               <option value="&category=23">History</option>
+              <option value="&category=24">Politics</option>
+              <option value="&category=25">Art</option>
               <option value="&category=26">Celebrities</option>
+              <option value="&category=27">Animals</option>
+              <option value="&category=28">Vehicles</option>
               <option value="&category=29">Comics</option>
+              <option value="&category=30">Gadgets</option>
               <option value="&category=31">Anime & Manga</option>
               <option value="&category=32">Cartoon & Animation</option>
             </select>
