--- a/index.html
+++ b/index.html
@@ -8,83 +8,29 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
     <!--css versioning using js random number-->
     <script>
       document.write(
-        ` <link rel="stylesheet" href="modules/styles/TMstyle.css?v=${
+        ` <link rel="stylesheet" href="modules/main-content/main-style.css?v=${
           Math.trunc(Math.random() * 10000) + 1
         }" />`
       );
     </script>
-    <!-- <link rel="stylesheet" href="modules/styles/TMstyle.css" /> -->
-    <!--JS PDF library-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
   </head>
-
   <body>
-    <div class="main-container">
-      <h1 class="title">terraformacja</h1>
+    <h1>Hello there!</h1>
+    <ul>
+      <li><a href="terraforming.html">Map Generator</a></li>
+      <li><a href="dice.html">Dice game</a></li>
+      <li><a href="quiz-api.html">Quiz</a></li>
+    </ul>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-      <script>
-        //print pdf implementation
-        function printContent(el) {
-          var restorepage = document.body.innerHTML;
-          var printcontent = document.getElementById(el).innerHTML;
-          document.body.innerHTML = printcontent;
-          window.print();
-          document.body.innerHTML = restorepage;
-          //var background = document.getElementsByClassName('modal-backdrop');
-          //background
-        }
-
-        $(document).ready(function () {
-          var doc = new jsPDF();
-          var specialElementHandlers = {
-            '#pdf-content': function (element, renderer) {
-              return true;
-            },
-          };
-
-          $('#btn').click(function () {
-            doc.fromHTML($('#mapContainer').html(), 15, 15, {
-              width: 170,
-              elementHandlers: specialElementHandlers,
-            });
-            doc.save('terraforming.pdf');
-          });
-        });
-
-        /* function doScroll() {
-        $("html, body").animate(
-          { scrollTop: "0" }, 1000);
-        $("html, body").animate(
-          { scrollTop: "30" }, 1000);
-      }
-      setInterval(doScroll, 2000);
-      doScroll();
-      */
-      </script>
-      <script src="modules/scripts/TMapp.js"></script>
-      <div id="pdf-content"></div>
-      <div class="btn-row">
-        <div class="btn-box">
-          <button
-            class="btn btn-water"
-            id="print"
-            onclick="printContent('mapContainer')"
-          >
-            Print content
-          </button>
-          <button class="btn btn-mars disabled" id="btn">
-            Klikaj to drugie (Jeśli już cokolwiek)
-          </button>
-        </div>
-      </div>
-    </div>
+    <script>
+      document.write(
+        `<script src="modules/main-content/main-script.js?v="${
+          Math.trunc(Math.random() * 10000) + 1
+        }"><\/script>`
+      );
+    </script>
   </body>
 </html>
