--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Terraformacja - Mapka</title>
+    <title>Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
     />
     <!--css versioning using js random number-->
     <script>
@@ -16,15 +20,284 @@
         }" />`
       );
     </script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <ul>
-      <li><a href="terraforming.html">Map Generator</a></li>
-      <li><a href="dice.html">Dice game</a></li>
-      <li><a href="quiz-api.html">Quiz</a></li>
-    </ul>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container py-2">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://xanoosh.github.io/portfolio/"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                >Quiz</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/dice.html"
+                >Dice game</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/terraforming.html"
+                >Map Generator</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <h1 class="display-3 primary my-5">Hello there!</h1>
+          </div>
+          <div data-aos="fade-right" class="col-12">
+            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+            <p class="text-muted">
+              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
+              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
+              consectetur adipiscing, lorem ipsum dolor sit amet, consectetur
+              adipiscing, lorem ipsum dolor sit amet, consectetur adipiscing,
+              lorem ipsum dolor sit amet, consectetur adipiscing,lorem ipsum
+              dolor sit amet, consectetur adipiscing,
+            </p>
+          </div>
 
+          <div class="col-12 my-5">
+            <!-- tablist -->
+            <div class="row">
+              <div class="col-sm-4 col-12">
+                <div class="list-group" id="list-tab" role="tablist">
+                  <a
+                    class="list-group-item list-group-item-action active"
+                    id="list-home-list"
+                    data-bs-toggle="list"
+                    href="#list-home"
+                    role="tab"
+                    aria-controls="home"
+                    >Home</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-profile-list"
+                    data-bs-toggle="list"
+                    href="#list-profile"
+                    role="tab"
+                    aria-controls="profile"
+                    >Profile</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-messages-list"
+                    data-bs-toggle="list"
+                    href="#list-messages"
+                    role="tab"
+                    aria-controls="messages"
+                    >Messages</a
+                  >
+                  <a
+                    class="list-group-item list-group-item-action"
+                    id="list-settings-list"
+                    data-bs-toggle="list"
+                    href="#list-settings"
+                    role="tab"
+                    aria-controls="settings"
+                    >Settings</a
+                  >
+                </div>
+              </div>
+              <div class="col-sm-8 col-12">
+                <div class="tab-content" id="nav-tabContent">
+                  <div
+                    class="tab-pane fade show active"
+                    id="list-home"
+                    role="tabpanel"
+                    aria-labelledby="list-home-list"
+                  >
+                    1. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
+                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
+                    amet, consectetur adipiscing,
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-profile"
+                    role="tabpanel"
+                    aria-labelledby="list-profile-list"
+                  >
+                    2. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
+                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
+                    amet, consectetur adipiscing,
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-messages"
+                    role="tabpanel"
+                    aria-labelledby="list-messages-list"
+                  >
+                    3. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
+                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
+                    amet, consectetur adipiscing,
+                  </div>
+                  <div
+                    class="tab-pane fade"
+                    id="list-settings"
+                    role="tabpanel"
+                    aria-labelledby="list-settings-list"
+                  >
+                    4. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
+                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
+                    amet, consectetur adipiscing,
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- tablist end -->
+          </div>
+
+          <div class="col-12 my-5">
+            <!-- some carousel start -->
+
+            <div
+              id="carouselExampleIndicators"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <ol class="carousel-indicators">
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="0"
+                  class="active"
+                ></li>
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="1"
+                ></li>
+                <li
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="2"
+                ></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="modules/main-content/placeholder.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="modules/main-content/placeholder.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="modules/main-content/placeholder.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#carouselExampleIndicators"
+                role="button"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
+            <!-- some carousel end -->
+          </div>
+          <div class="col-12">
+            <!-- some quote start-->
+            <figure class="text-end border my-5 p-3">
+              <blockquote class="blockquote">
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Integer posuere erat a ante.
+                </p>
+              </blockquote>
+              <figcaption class="blockquote-footer">
+                Someone famous in
+                <cite title="Source Title">Source Title</cite>
+              </figcaption>
+            </figure>
+            <!-- some quote end -->
+          </div>
+          <div class="col-12" data aos="fade-in">
+            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+            <p class="text-muted">
+              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
+              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
+              consectetur adipiscing,
+            </p>
+          </div>
+          <hr class="my-5 border" />
+          <div class="col-12" data aos="fade-in">
+            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
+            <p class="text-muted">
+              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
+              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
+              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
+              consectetur adipiscing,
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       document.write(
         `<script src="modules/main-content/main-script.js?v="${
