--- a/index.html
+++ b/index.html
@@ -296,6 +296,17 @@
         </div>
       </div>
     </section>
+    <footer class="bg-light py-5 mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p class="text-muted my-5">
+              lorem ipsum dolor sit amet, consectetur adipiscing &COPY;
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
