more main sections small aos experiment

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
       </div>
     </nav>
+    <!-- section two -->
     <section>
       <div class="container">
         <div class="row justify-content-center">
@@ -93,7 +94,7 @@
           <div class="col-12 my-5">
             <!-- tablist -->
             <div class="row">
-              <div class="col-sm-4 col-12">
+              <div class="col-sm-4 col-12 mb-sm-0 mb-3">
                 <div class="list-group" id="list-tab" role="tablist">
                   <a
                     class="list-group-item list-group-item-action active"
@@ -141,10 +142,10 @@
                     role="tabpanel"
                     aria-labelledby="list-home-list"
                   >
-                    1. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
-                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
-                    amet, consectetur adipiscing,
+                    1. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </div>
                   <div
                     class="tab-pane fade"
@@ -152,10 +153,10 @@
                     role="tabpanel"
                     aria-labelledby="list-profile-list"
                   >
-                    2. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
-                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
-                    amet, consectetur adipiscing,
+                    2. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </div>
                   <div
                     class="tab-pane fade"
@@ -163,10 +164,10 @@
                     role="tabpanel"
                     aria-labelledby="list-messages-list"
                   >
-                    3. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
-                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
-                    amet, consectetur adipiscing,
+                    3. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </div>
                   <div
                     class="tab-pane fade"
@@ -174,17 +175,23 @@
                     role="tabpanel"
                     aria-labelledby="list-settings-list"
                   >
-                    4. lorem ipsum dolor sit amet, consectetur adipiscing, lorem
-                    ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-                    dolor sit amet, consectetur adipiscing,lorem ipsum dolor sit
-                    amet, consectetur adipiscing,
+                    4. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
                   </div>
                 </div>
               </div>
             </div>
             <!-- tablist end -->
           </div>
-
+        </div>
+      </div>
+    </section>
+    <!-- section two -->
+    <section>
+      <div class="container">
+        <div class="row justify-content-center">
           <div class="col-12 my-5">
             <!-- some carousel start -->
 
@@ -263,13 +270,15 @@
             <figure class="text-end border my-5 p-3">
               <blockquote class="blockquote">
                 <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer posuere erat a ante.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                  laboris nisi ut aliquip
                 </p>
               </blockquote>
               <figcaption class="blockquote-footer">
-                Someone famous in
-                <cite title="Source Title">Source Title</cite>
+                Duis aute
+                <cite title="Source Title">Ex ea commodo consequat.</cite>
               </figcaption>
             </figure>
             <!-- some quote end -->
@@ -277,13 +286,105 @@
           <div class="col-12" data aos="fade-in">
             <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
             <p class="text-muted">
-              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
-              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
-              consectetur adipiscing,
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
           </div>
-          <hr class="my-5 border" />
+          <div class="col-12 my-5">
+            <div class="row">
+              <!-- some cards start -->
+              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <img
+                    src="https://via.placeholder.com/300x300?text=Project placeholder "
+                    class="card-img-top d-sm-block d-none"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Dice Game</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/dice.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <img
+                    src="https://via.placeholder.com/300x300?text=Project placeholder "
+                    class="card-img-top d-sm-block d-none"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Quiz</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <img
+                    src="https://via.placeholder.com/300x300?text=Project placeholder "
+                    class="card-img-top d-sm-block d-none"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Map Generator</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/terraforming.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <img
+                    src="https://via.placeholder.com/300x300?text=Project placeholder "
+                    class="card-img-top d-sm-block d-none"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <h5 class="card-title">Project</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a href="#" class="btn btn-primary">Link</a>
+                  </div>
+                </div>
+              </div>
+              <!-- some cards end -->
+            </div>
+          </div>
           <div class="col-12" data aos="fade-in">
             <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
             <p class="text-muted">
@@ -300,7 +401,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p class="text-muted my-5">
+            <p class="text-muted my-5 small">
               lorem ipsum dolor sit amet, consectetur adipiscing &COPY;
             </p>
           </div>
