trying to make typing animation in js...

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12">
-            <h1 class="display-3 primary my-5">Hello there!</h1>
+            <h1 class="display-3 primary my-5 type-it"></h1>
           </div>
           <div data-aos="fade-right" class="col-12">
             <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
