--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <div class="container py-2">
+      <div class="container py-2 justify-content-sm-start justify-content-end">
         <button
           class="navbar-toggler"
           type="button"
@@ -76,7 +76,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12">
-            <h1 class="display-3 primary my-5 type-it"></h1>
+            <h1 class="display-3 primary my-5">
+              <span class="type-it"></span>
+            </h1>
           </div>
           <div data-aos="fade-right" class="col-12">
             <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
@@ -408,6 +410,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
