new memory game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a
                 class="nav-link"
                 href="https://xanoosh.github.io/portfolio/quiz-api.html"
-                >Quiz</a
+                >Quiz game</a
               >
             </li>
             <li class="nav-item">
@@ -58,6 +58,13 @@
                 class="nav-link"
                 href="https://xanoosh.github.io/portfolio/dice.html"
                 >Dice game</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://xanoosh.github.io/portfolio/memo.html"
+                >Memory game</a
               >
             </li>
             <li class="nav-item">
@@ -352,6 +359,28 @@
                     alt="..."
                   />
                   <div class="card-body">
+                    <h5 class="card-title">Memory game</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Excepteur sint occaecat cupidatat non proident, sunt in
+                      culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/memo.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 mb-md-0 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <img
+                    src="https://via.placeholder.com/300x300?text=Project placeholder "
+                    class="card-img-top d-sm-block d-none"
+                    alt="..."
+                  />
+                  <div class="card-body">
                     <h5 class="card-title">Map Generator</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
@@ -374,13 +403,17 @@
                     alt="..."
                   />
                   <div class="card-body">
-                    <h5 class="card-title">Project</h5>
+                    <h5 class="card-title">"What's in my fridge" App</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
                       Excepteur sint occaecat cupidatat non proident, sunt in
                       culpa qui officia deserunt mollit anim id est laborum.
                     </p>
-                    <a href="#" class="btn btn-primary">Link</a>
+                    <a
+                      href="https://xanoosh.github.io/portfolio/recipe-api.html"
+                      class="btn btn-primary"
+                      >Link</a
+                    >
                   </div>
                 </div>
               </div>
