new memory game

--- a/memo.html
+++ b/memo.html
@@ -19,24 +19,10 @@
   </head>
   <body>
     <div id="board">
-      <!-- <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div>
-      <div class="memo"></div> -->
+      <div id="win" class="hidden">
+        <h1>Epic win</h1>
+      </div>
     </div>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       document.write(
         `<script src="modules/memo-content/memo-script.js?v="${
