restart button added  to memo game

--- a/memo-wiesio.html
+++ b/memo-wiesio.html
@@ -20,6 +20,7 @@
   <body>
     <div id="board">
       <div id="win" class="hidden">
+        <button onClick="window.location.reload();">Nowa Gra</button>
         <h1>Kalendarz w drodze :)</h1>
       </div>
     </div>
