added product list genterationg

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -17,7 +17,7 @@
     <title>Recipe project</title>
   </head>
   <body>
-    <div id="content">
+    <div id="main">
       <h2>Click to get your recipe</h2>
       <button id="init">Get recipe</button>
     </div>
