working on animation of recipes

--- a/recipe-api.html
+++ b/recipe-api.html
@@ -18,8 +18,11 @@
   </head>
   <body>
     <div id="main">
-      <h2>Click to get your recipe</h2>
-      <button id="init">Get recipe</button>
+      <div id="sidebar">
+        <h2>Click to get your recipe</h2>
+        <button id="init">Get recipe</button>
+      </div>
+      <div id="list"></div>
     </div>
     <script>
       document.write(
