--- a/recipe-api.html
+++ b/recipe-api.html
@@ -18,11 +18,12 @@
   </head>
   <body>
     <div id="main">
+      <div id="overlay" class="hidden"></div>
       <div id="sidebar">
         <h2>Click to get your recipe</h2>
         <button id="init">Get recipe</button>
       </div>
-      <div id="list"></div>
+      <div id="list" class="hidden"></div>
     </div>
     <script>
       document.write(
